# ipog-project

./: .env.example  .gitignore  README.md  generate_reports.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  ceo_report.py  excel_analyst.py  metrics_agent.py  model_factory.py  products_report.py  sales_report.py
data/: SampleSuperstore.csv
temp_tests/: README.md  analista.py  researcher.py
templates/: ceo_report.md  products_report.md  sales_report.md
tests/: conftest.py  test_ceo_report.py  test_excel_analyst.py  test_metrics_agent.py  test_products_report.py  test_sales_report.py
